Show location warning

--- a/walk to circle/Base.lproj/Main.storyboard
+++ b/walk to circle/Base.lproj/Main.storyboard
@@ -95,9 +95,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qOQ-av-wGk">
-                                <rect key="frame" x="16" y="279" width="568" height="41"/>
-                                <string key="text">"Walk to Circle" app needs your permission to determine your location. Please enable location services in Settings &gt; Privacy &gt; Location Services</string>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Walk to Circle&quot; app needs permission to determine your location. " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qOQ-av-wGk">
+                                <rect key="frame" x="16" y="270" width="568" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9FK-8X-uyD">
+                                <rect key="frame" x="251" y="340" width="98" height="30"/>
+                                <state key="normal" title="Open Settings">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onOpenAppSettingsTapped:" destination="Vij-1u-SNl" eventType="touchUpInside" id="WGu-j4-vrL"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Instructions..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p6h-Ln-TdQ">
+                                <rect key="frame" x="16" y="300" width="568" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -105,11 +119,20 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="centerX" secondItem="9FK-8X-uyD" secondAttribute="centerX" id="D9H-ZY-cAm"/>
+                            <constraint firstItem="p6h-Ln-TdQ" firstAttribute="top" secondItem="qOQ-av-wGk" secondAttribute="bottom" constant="10" id="IPT-cq-4I3"/>
+                            <constraint firstItem="p6h-Ln-TdQ" firstAttribute="leading" secondItem="q6C-jQ-pz2" secondAttribute="leadingMargin" id="Nyi-Um-paX"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="p6h-Ln-TdQ" secondAttribute="trailing" id="bp6-Wn-XxI"/>
                             <constraint firstItem="qOQ-av-wGk" firstAttribute="leading" secondItem="q6C-jQ-pz2" secondAttribute="leadingMargin" id="cVQ-Lp-0ac"/>
                             <constraint firstAttribute="trailingMargin" secondItem="qOQ-av-wGk" secondAttribute="trailing" id="lFE-QL-SKs"/>
-                            <constraint firstAttribute="centerY" secondItem="qOQ-av-wGk" secondAttribute="centerY" id="v6d-7p-UY4"/>
+                            <constraint firstAttribute="centerY" secondItem="qOQ-av-wGk" secondAttribute="centerY" constant="20" id="v6d-7p-UY4"/>
+                            <constraint firstItem="9FK-8X-uyD" firstAttribute="top" secondItem="p6h-Ln-TdQ" secondAttribute="bottom" constant="20" id="wOO-aM-QW3"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="openAppSettingsButton" destination="9FK-8X-uyD" id="gte-Kl-VQ2"/>
+                        <outlet property="settingsInstructionLabel" destination="p6h-Ln-TdQ" id="Y9i-wO-FOF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gmq-fq-nXf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
